# identra

./: .gitignore  DEPLOYMENT_GUIDE.md  Justfile  MIGRATION_GUIDE.md  MVP_COMPLETION_GUIDE.md  MVP_IMPLEMENTATION_STATUS.md  README.md
.github/: copilot-instructions.md
apps/brain-service/: README.md  main.py  requirements.txt
apps/tunnel-gateway/: Cargo.toml  test-grpc.js  test-memory.js
apps/tunnel-gateway/migrations/: 20240213_initial_schema.sql  20250214_alter_existing_schema.sql  20250214_complete_mvp_schema.sql  README.md
apps/tunnel-gateway/src/: database.rs  main.rs
apps/tunnel-gateway/src/auth/: middleware.rs  supabase_client.rs
apps/tunnel-gateway/src/services/: memory.rs  mod.rs  vault.rs
apps/vault-daemon/: Cargo.toml
apps/vault-daemon/src/: keychain.rs
clients/ghost-desktop/: package.json  tailwind.config.js
clients/ghost-desktop/src/: App.css  App.jsx
clients/ghost-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/ghost-desktop/src-tauri/src/: commands.rs  grpc_client.rs  lib.rs  state.rs
clients/ghost-desktop/src/components/: MemoryCard.jsx
clients/ghost-desktop/src/components/ui/: Avatar.jsx  Button.jsx  Card.jsx
clients/ghost-desktop/src/context/: AuthContext.jsx
clients/ghost-desktop/src/pages/: ChatInterface.jsx  Launcher.jsx  Login.jsx  MemoryVault.jsx  Onboarding.jsx  Register.jsx  SearchPage.jsx
data/: memories.db
libs/identra-crypto/: Cargo.toml
libs/identra-crypto/src/: lib.rs
libs/identra-proto/proto/: memory.proto
